telemetry applicaiton.enviroment
Signed-off-by: mengwp2004 <mengwp_2012@163.com>

--- a/telemetry/src/main/resources/com/rarible/bootstrap/bootstrap.yml
+++ b/telemetry/src/main/resources/com/rarible/bootstrap/bootstrap.yml
@@ -14,7 +14,7 @@ spring:
       discovery:
         health-check-path: /_status/ping
         health-check-critical-timeout: "3m"
-      host: consul-agent
+      host: localhost
       port: 8500
       config:
         watch:
